adding lightbox and lazy loading to pictures

--- a/content/post/2016-08-03-iceland.md
+++ b/content/post/2016-08-03-iceland.md
@@ -16,52 +16,52 @@ categories: ["travel"]
 * You should prepare for quite a good amount of strong winds.
 * Sadly, I missed the opportunity to dive between the continental plates.
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-007.jpg" title="Hallgrímskirkja in Reykjavík" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-007.jpg" title="Hallgrímskirkja in Reykjavík" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-027.jpg" title="On route to Thingvellir National Park" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-027.jpg" title="On route to Thingvellir National Park" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-029.jpg" title="On route to Thingvellir National Park" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-029.jpg" title="On route to Thingvellir National Park" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-031.jpg" title="Thingvellir National Park" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-031.jpg" title="Thingvellir National Park" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-034.jpg" title="Thingvellir National Park" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-034.jpg" title="Thingvellir National Park" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-038.jpg" title="Thingvellir National Park" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-038.jpg" title="Thingvellir National Park" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-040.jpg" title="Haukadalur geothermal area" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-040.jpg" title="Haukadalur geothermal area" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-044.jpg" title="Strokkur" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-044.jpg" title="Strokkur" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-048.jpg" title="Gullfoss" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-048.jpg" title="Gullfoss" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-052.jpg" title="Small stream near Hveragerði" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-052.jpg" title="Small stream near Hveragerði" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-061.jpg" title="In front of Seljalandsfoss" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-061.jpg" title="In front of Seljalandsfoss" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-063.jpg" title="Seljalandsfoss" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-063.jpg" title="Seljalandsfoss" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-066.jpg" title="Gljúfrafoss" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-066.jpg" title="Gljúfrafoss" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-068.jpg" title="In front of Gljúfrafoss" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-068.jpg" title="In front of Gljúfrafoss" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-073.jpg" title="Stone cairns on a Laufskálavarða lava ridge" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-073.jpg" title="Stone cairns on a Laufskálavarða lava ridge" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-076.jpg" title="Foss á Síðu" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-076.jpg" title="Foss á Síðu" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-079.jpg" title="Dverghamrar" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-079.jpg" title="Dverghamrar" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-086.jpg" title="Skaftafell Glacier" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-086.jpg" title="Skaftafell Glacier" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-096.jpg" title="Landscape near Vík í Mýrdal" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-096.jpg" title="Landscape near Vík í Mýrdal" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-098.jpg" title="Landscape near Vík í Mýrdal" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-098.jpg" title="Landscape near Vík í Mýrdal" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-104.jpg" title="Rest on the way to Thórsmörk" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-104.jpg" title="Rest on the way to Thórsmörk" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-110.jpg" title="View from Thórsmörk" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-110.jpg" title="View from Thórsmörk" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-115.jpg" title="Uphill to Thórsmörk" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-115.jpg" title="Uphill to Thórsmörk" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-116.jpg" title="View from Thórsmörk" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-116.jpg" title="View from Thórsmörk" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-135.jpg" title="Lakes near the Blue Lagoon geothermal spa" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/iceland/Island-135.jpg" title="Lakes near the Blue Lagoon geothermal spa" loading="lazy" glightboxclass="glightbox">}}
