--- a/content/post/2017-11-20-sweden.md
+++ b/content/post/2017-11-20-sweden.md
@@ -17,28 +17,28 @@ categories: ["travel", "europe"]
 
 ### Stockholm
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-007.jpg" title="Strandvägen" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-010.jpg" title="Blå porten" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-030.jpg" title="Kungsholmen" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-032.jpg" title="Roof of Rådsalen in Stockholm City Hall" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-035.jpg" title="Entrance to The Golden Hall in Stockholm City Hall" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-037.jpg" title="Stairs down to The Blue Hall in Stockholm City Hall" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-007.jpg" title="Strandvägen" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-010.jpg" title="Blå porten" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-030.jpg" title="Kungsholmen" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-032.jpg" title="Roof of Rådsalen in Stockholm City Hall" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-035.jpg" title="Entrance to The Golden Hall in Stockholm City Hall" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-037.jpg" title="Stairs down to The Blue Hall in Stockholm City Hall" loading="lazy" glightboxclass="glightbox">}}
 
 ### Abisko <a name="abisko"></a>
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-056.jpg" title="Hiking near Abisko Turiststation" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-058.jpg" title="Hiking near Abisko Turiststation" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-059.jpg" title="Hiking near Abisko Turiststation" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-060.jpg" title="View of Lake Torneträsk" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-065.jpg" title="Hiking on the Kungsleden" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-069.jpg" title="Reindeers on the Kungsleden" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-070.jpg" title="Resting and meditation spot on the Kungsleden" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-077.jpg" title="Nothern Lights starting behind the next mountain..." >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-079.jpg" title="Great moving curtains" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-083.jpg" title="Northern Lights looking like a flame" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-085.jpg" title="Taking pictures at -15°C" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-095.jpg" title="Glass made of ice at the ICEHOTEL Jukkasjärvi bar" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-105.jpg" title="Ice library at ICEHOTEL Jukkasjärvi" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-109.jpg" title="Ice labyrinth room at ICEHOTEL Jukkasjärvi" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-112.jpg" title="Frozen pier at Lake Torneträsk" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-117.jpg" title="Restaurant in Abisko" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-056.jpg" title="Hiking near Abisko Turiststation" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-058.jpg" title="Hiking near Abisko Turiststation" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-059.jpg" title="Hiking near Abisko Turiststation" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-060.jpg" title="View of Lake Torneträsk" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-065.jpg" title="Hiking on the Kungsleden" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-069.jpg" title="Reindeers on the Kungsleden" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-070.jpg" title="Resting and meditation spot on the Kungsleden" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-077.jpg" title="Nothern Lights starting behind the next mountain..." loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-079.jpg" title="Great moving curtains" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-083.jpg" title="Northern Lights looking like a flame" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-085.jpg" title="Taking pictures at -15°C" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-095.jpg" title="Glass made of ice at the ICEHOTEL Jukkasjärvi bar" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-105.jpg" title="Ice library at ICEHOTEL Jukkasjärvi" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-109.jpg" title="Ice labyrinth room at ICEHOTEL Jukkasjärvi" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-112.jpg" title="Frozen pier at Lake Torneträsk" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2017/sweden/Schweden-117.jpg" title="Restaurant in Abisko" loading="lazy" glightboxclass="glightbox">}}
