--- a/content/post/2018-06-20-ireland.md
+++ b/content/post/2018-06-20-ireland.md
@@ -15,22 +15,22 @@ categories: ["travel", "europe"]
 * Can recommend to rent a cottage with fireplace if possible.
 * Yes, most of the beers we tasted tasted really good.
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-001.jpg" title="Dublin" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-010.jpg" title="The Dark Hedges" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-011.jpg" title="Walking nearby The Dark Hedges" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-014.jpg" title="Giant's Causeway" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-023.jpg" title="View of Sheep Island" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-037.jpg" title="Cliffs Of Moher" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-038.jpg" title="Cliffs Of Moher" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-043.jpg" title="O'Brien's Tower" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-045.jpg" title="Clouds at Cliffs Of Moher" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-048.jpg" title="Again, the Cliffs Of Moher" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-050.jpg" title="Walking on Burren Way" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-060.jpg" title="View from Dún Aonghasa, Aran Islands" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-068.jpg" title="View of Aran Islands" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-077.jpg" title="Ross Castle, Killarney National Park" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-081.jpg" title="Muckross House, Killarney National Park" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-082.jpg" title="Torc Waterfall, Killarney National Park" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-083.jpg" title="Hiking up Torc Mountain, Killarney National Park" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-085.jpg" title="Smithwick's Brewery Pub, Kilkenny" >}}
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-096.jpg" title="Smithwick's Brewery, Kilkenny" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-001.jpg" title="Dublin" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-010.jpg" title="The Dark Hedges" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-011.jpg" title="Walking nearby The Dark Hedges" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-014.jpg" title="Giant's Causeway" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-023.jpg" title="View of Sheep Island" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-037.jpg" title="Cliffs Of Moher" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-038.jpg" title="Cliffs Of Moher" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-043.jpg" title="O'Brien's Tower" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-045.jpg" title="Clouds at Cliffs Of Moher" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-048.jpg" title="Again, the Cliffs Of Moher" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-050.jpg" title="Walking on Burren Way" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-060.jpg" title="View from Dún Aonghasa, Aran Islands" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-068.jpg" title="View of Aran Islands" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-077.jpg" title="Ross Castle, Killarney National Park" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-081.jpg" title="Muckross House, Killarney National Park" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-082.jpg" title="Torc Waterfall, Killarney National Park" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-083.jpg" title="Hiking up Torc Mountain, Killarney National Park" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-085.jpg" title="Smithwick's Brewery Pub, Kilkenny" loading="lazy" glightboxclass="glightbox">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/ireland/Irland-096.jpg" title="Smithwick's Brewery, Kilkenny" loading="lazy" glightboxclass="glightbox">}}
