--- a/content/post/2018-11-23-japan.md
+++ b/content/post/2018-11-23-japan.md
@@ -22,86 +22,86 @@ categories: ["travel", "asia"]
 
 ### Tokyo <a name="tokyo"></a>
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-005.jpg" title="Asakusa Shrine" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-005.jpg" title="Asakusa Shrine" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-006.jpg" title="Tokyo Sky Tree" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-006.jpg" title="Tokyo Sky Tree" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-015.jpg" title="Imperial Palace balcony" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-015.jpg" title="Imperial Palace balcony" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-024.jpg" title="teamLab Borderless digital art exhibition" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-024.jpg" title="teamLab Borderless digital art exhibition" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-026.jpg" title="teamLab Borderless digital art exhibition" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-026.jpg" title="teamLab Borderless digital art exhibition" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-038.jpg" title="Hama-rikyū Gardens" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-038.jpg" title="Hama-rikyū Gardens" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-047.jpg" title="Shoyoen Garden in Nikko" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-047.jpg" title="Shoyoen Garden in Nikko" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-055.jpg" title="Yomeimon Gate in Nikko" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-055.jpg" title="Yomeimon Gate in Nikko" loading="lazy" glightboxclass="glightbox">}}
 
 ### Takayama <a name="takayama"></a>
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-057.jpg" title="Chuzenji Lake" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-057.jpg" title="Chuzenji Lake" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-064.jpg" title="Kenchoji Temple in Kamakura" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-064.jpg" title="Kenchoji Temple in Kamakura" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-090.jpg" title="Shirakawa" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-090.jpg" title="Shirakawa" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-097.jpg" title="Gassho-zukuri Village in Shirakawa-go" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-097.jpg" title="Gassho-zukuri Village in Shirakawa-go" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-101.jpg" title="Landscape near Tsubakihara Dam" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-101.jpg" title="Landscape near Tsubakihara Dam" loading="lazy" glightboxclass="glightbox">}}
 
 ### Kanazawa <a name="kanazawa"></a>
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-105.jpg" title="Kenroku-en in Kanazawa" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-105.jpg" title="Kenroku-en in Kanazawa" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-108.jpg" title="Iconic Kotoji-tōrō lantern in Kenroku-en" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-108.jpg" title="Iconic Kotoji-tōrō lantern in Kenroku-en" loading="lazy" glightboxclass="glightbox">}}
 
 ### Kyoto <a name="kyoto"></a>
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-123.jpg" title="Torii path at Fushimi Inari-Taisha Shrine, Kyoto" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-123.jpg" title="Torii path at Fushimi Inari-Taisha Shrine, Kyoto" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-125.jpg" title="View from Fushimi Inari-Taisha Shrine, Kyoto" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-125.jpg" title="View from Fushimi Inari-Taisha Shrine, Kyoto" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-132.jpg" title="Kinkaku-ji in Kyoto" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-132.jpg" title="Kinkaku-ji in Kyoto" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-140.jpg" title="Garden of Ginkaku-ji in Kyoto" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-140.jpg" title="Garden of Ginkaku-ji in Kyoto" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-148.jpg" title="Yoshikien Garden in Nara" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-148.jpg" title="Yoshikien Garden in Nara" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-153.jpg" title="Tōdai-ji in Nara" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-153.jpg" title="Tōdai-ji in Nara" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-171.jpg" title="Himeji Castle" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-171.jpg" title="Himeji Castle" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-175.jpg" title="Kōko-en garden next to Himeji Castle" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-175.jpg" title="Kōko-en garden next to Himeji Castle" loading="lazy" glightboxclass="glightbox">}}
 
 ### Hiroshima <a name="hiroshima"></a>
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-183.jpg" title="Flame of Peace in Hiroshima Peace Memorial Park" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-183.jpg" title="Flame of Peace in Hiroshima Peace Memorial Park" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-185.jpg" title="The A-Bomb Dome" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-185.jpg" title="The A-Bomb Dome" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-189.jpg" title="Shukkei-en historic Japanese garden in Hiroshima" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-189.jpg" title="Shukkei-en historic Japanese garden in Hiroshima" loading="lazy" glightboxclass="glightbox">}}
 
 ### Miyajima <a name="miyajima"></a>
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-194.jpg" title="Hungry Sika deer on Itsukushima" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-194.jpg" title="Hungry Sika deer on Itsukushima" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-195.jpg" title="Torii at the Itsukushima Shrine" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-195.jpg" title="Torii at the Itsukushima Shrine" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-205.jpg" title="Toyotomi Hideyoshi's Senjō-kaku on Itsukushima" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-205.jpg" title="Toyotomi Hideyoshi's Senjō-kaku on Itsukushima" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-208.jpg" title="Torii at the Itsukushima Shrine at night" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-208.jpg" title="Torii at the Itsukushima Shrine at night" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-212.jpg" title="Walking up Mount Misen" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-212.jpg" title="Walking up Mount Misen" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-214.jpg" title="View from top of Mount Misen" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-214.jpg" title="View from top of Mount Misen" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-216.jpg" title="Walking down Mount Misen" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-216.jpg" title="Walking down Mount Misen" loading="lazy" glightboxclass="glightbox">}}
 
 ### Osaka <a name="osaka"></a>
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-219.jpg" title="Osaka Castle" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-219.jpg" title="Osaka Castle" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-222.jpg" title="View from Osaka Castle" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/Japan-222.jpg" title="View from Osaka Castle" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/IMG_20181118_173100.jpg" title="Wagyu Beef Lunch in Osaka" loading="lazy">}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2018/japan/IMG_20181118_173100.jpg" title="Wagyu Beef Lunch in Osaka" loading="lazy" glightboxclass="glightbox">}}
