--- a/content/post/2016-05-20-cuba.md
+++ b/content/post/2016-05-20-cuba.md
@@ -19,60 +19,60 @@ categories: ["travel", "middle america"]
 
 ### Havana <a name="havana"></a>
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-173.jpg" title="National Capitol Building" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-173.jpg" title="National Capitol Building" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-179.jpg" title="The Malecón" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-179.jpg" title="The Malecón" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-183.jpg" title="Oldtimers in the city centre" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-183.jpg" title="Oldtimers in the city centre" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-185.jpg" title="Oldtimer in front of the National Capitol Building" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-185.jpg" title="Oldtimer in front of the National Capitol Building" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-187.jpg" title="Older building" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-187.jpg" title="Older building" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-208.jpg" title="Monumento Maximo Gomez" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-208.jpg" title="Monumento Maximo Gomez" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-220.jpg" title="Stairs in the University of Havana" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-220.jpg" title="Stairs in the University of Havana" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-224.jpg" title="Playing board games on the street" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-224.jpg" title="Playing board games on the street" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-350.jpg" title="Las Terrazas National Park" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-350.jpg" title="Las Terrazas National Park" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-369.jpg" title="Las Terrazas National Park" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-369.jpg" title="Las Terrazas National Park" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-374.jpg" title="Even older building" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-374.jpg" title="Even older building" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-381.jpg" title="Havana Club Museum and Bar" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-381.jpg" title="Havana Club Museum and Bar" loading="lazy" glightboxclass="glightbox">}}
 
 ### Viñales <a name="vinales"></a>
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-229.jpg" title="Hiking in Valle De Dos Hermanas" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-229.jpg" title="Hiking in Valle De Dos Hermanas" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-239.jpg" title="Hiking near the Cueva de la Vaca" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-239.jpg" title="Hiking near the Cueva de la Vaca" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-242.jpg" title="Beach at María La Gorda" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-242.jpg" title="Beach at María La Gorda" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-256.jpg" title="Hiking in Valle De Dos Hermanas" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-256.jpg" title="Hiking in Valle De Dos Hermanas" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-260.jpg" title="Hiking in Valle De Dos Hermanas" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-260.jpg" title="Hiking in Valle De Dos Hermanas" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-263.jpg" title="Mural De La Prehistoria, Dos Hermanas Mogote" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-263.jpg" title="Mural De La Prehistoria, Dos Hermanas Mogote" loading="lazy" glightboxclass="glightbox">}}
 
 ### Trinidad <a name="trinidad"></a>
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-289.jpg" title="Manaca Iznaga Tower in Valle de los Ingenios" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-289.jpg" title="Manaca Iznaga Tower in Valle de los Ingenios" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-292.jpg" title="Valle de los Ingenios" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-292.jpg" title="Valle de los Ingenios" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-304.jpg" title="View of Trinidad" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-304.jpg" title="View of Trinidad" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-313.jpg" title="Hiking at Salto del Caburní" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-313.jpg" title="Hiking at Salto del Caburní" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-314.jpg" title="Salto del Caburní" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-314.jpg" title="Salto del Caburní" loading="lazy" glightboxclass="glightbox">}}
 
 ### María la Gorda <a name="marialagorda"></a>
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-326.jpg" title="Oldtimer at Playa Girón" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/urlaub2016-326.jpg" title="Oldtimer at Playa Girón" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/UPlayaGiron-002.jpg" title="Wreckage in Pig's Bay" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/UPlayaGiron-002.jpg" title="Wreckage in Pig's Bay" loading="lazy" glightboxclass="glightbox">}}
 
-{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/UPlayaGiron-007.jpg" title="Diving in Pig's Bay" >}}
+{{< figure src="https://res.cloudinary.com/occbdev/image/upload/t_inline_pic/images/travel/2016/cuba/UPlayaGiron-007.jpg" title="Diving in Pig's Bay" loading="lazy" glightboxclass="glightbox">}}
